--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "git-n-sync",
+  "name": "syncer",
   "version": "0.1.0",
   "description": "Keeps a local git repo tightly synced w/ a remote",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register"
+    "test": "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
+    "start" :  "electron main.js"
   },
   "bin": {
     "syncer": "./bin/syncer"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rissem/git-n-sync"
+    "url": "https://github.com/rissem/syncer"
   },
   "keywords": [
     "git",
@@ -20,9 +21,9 @@
   "author": "Mike Risse",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rissem/git-n-sync/issues"
+    "url": "https://github.com/rissem/syncer/issues"
   },
-  "homepage": "https://github.com/rissem/git-n-sync",
+  "homepage": "https://github.com/rissem/syncer",
   "devDependencies": {
     "chai": "^2.3.0",
     "chai-as-promised": "^5.0.0",
@@ -33,8 +34,8 @@
   "dependencies": {
     "chokidar": "^1.4.2",
     "coffee-script": "^1.9.2",
-    "commander": "^2.8.1",
     "lie": "^2.8.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "electron-prebuilt": "^0.37.8"
   }
 }
