--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Keeps a local git repo tightly synced w/ a remote",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
-    "start" :  "electron main.js"
+    "start": "electron main.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^2.3.0",
     "chai-as-promised": "^5.0.0",
+    "electron-rebuild": "^1.1.5",
     "mocha": "^2.2.5",
     "nodegit": "^0.11.6",
     "rimraf": "^2.3.4"
@@ -31,8 +32,8 @@
   "dependencies": {
     "chokidar": "^1.4.2",
     "coffee-script": "^1.9.2",
+    "electron-prebuilt": "^1.1.2",
     "lie": "^2.8.1",
-    "underscore": "^1.8.3",
-    "electron-prebuilt": "^0.37.8"
+    "underscore": "^1.8.3"
   }
 }
